--- a/src/ValueChains/components/layouts/ProcessNodeLayout/ProcessNodeLayout.module.scss
+++ b/src/ValueChains/components/layouts/ProcessNodeLayout/ProcessNodeLayout.module.scss
@@ -1,16 +1,17 @@
 .processNodeLayoutWrapper {
-	width: 200px;
-	height: 60px;
+	width: 230;
+	border: 1px solid black;
+	height: 70px;
+	background: #ffffff;
 }
 
 .processNodeLayout {
-	width: 200px;
-	height: 60px;
+	width: 230px;
+	height: 70px;
 	position: relative;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border: 1px solid black;
 	&::after {
 		content: '';
 		position: absolute;
