--- a/src/ValueChains/components/layouts/SegmentNodeLayout/SegmentNodeLayout.module.scss
+++ b/src/ValueChains/components/layouts/SegmentNodeLayout/SegmentNodeLayout.module.scss
@@ -1,3 +1,9 @@
+.segmentNodeLayoutWrapper {
+	width: 230;
+	height: 70px;
+	background: #ffffff;
+}
+
 .segmentNodeLayout {
 	width: 230px;
 	height: 70px;
@@ -5,7 +11,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background: #ffffff;
 	.content {
 		position: absolute;
 	}
